tests/lean/bad_pattern.lean.expected.out
bad_pattern.lean:6:33: error: invalid pattern hint, pattern must be applications
